--- a/Oblig1/manual_classification.ipynb
+++ b/Oblig1/manual_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f4a2c6d6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "8c41a6a9",
    "metadata": {},
    "outputs": [
@@ -91,36 +91,207 @@
        "      <td>1.6</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0    0    1    2    3                4\n",
-       "0           0  4.4  3.2  1.3  0.2      Iris-setosa\n",
-       "1           1  4.9  3.1  1.5  0.1      Iris-setosa\n",
-       "2           2  4.6  3.2  1.4  0.2      Iris-setosa\n",
-       "3           3  4.4  2.9  1.4  0.2      Iris-setosa\n",
-       "4           4  6.0  2.7  5.1  1.6  Iris-versicolor"
+       "    Unnamed: 0    0    1    2    3                4\n",
+       "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
+       "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
+       "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
+       "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
+       "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
+       "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
+       "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
+       "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
+       "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
+       "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n",
+       "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
+       "11          11  6.3  3.4  5.6  2.4   Iris-virginica"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"../Oblig1/iris_subset.csv\")\n",
-    "dataset.head()"
+    "df = pd.read_csv(\"../Oblig1/iris_subset.csv\")\n",
+    "train = df.iloc[:12,]\n",
+    "test = df.iloc[12:,]\n",
+    "train.head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41268c8c",
+   "metadata": {},
+   "source": [
+    "Først leser vi inn dataene og delere dette opp i training og testing deler."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b50db855",
+   "metadata": {},
+   "source": [
+    "Ut i fra hvordan test dataene ser ut ser det ut som vi kan prøve dele opp "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6e1ade",
+   "id": "632f07fa",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ae6e1ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0    0    1    2    3                4\n",
+       "12          12  4.6  3.2  1.4  0.2      Iris-setosa\n",
+       "13          13  5.1  2.5  3.0  1.1  Iris-versicolor\n",
+       "14          14  7.2  3.0  5.8  1.6   Iris-virginica"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head(10)"
+   ]
   }
  ],
  "metadata": {
