--- a/Oblig1/manual_classification.ipynb
+++ b/Oblig1/manual_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f4a2c6d6",
    "metadata": {},
    "outputs": [],
@@ -11,179 +11,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e04cf3d",
+   "metadata": {},
+   "source": [
+    "Først leser vi inn dataene og deler opp disse i training og testing deler."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "8c41a6a9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Unnamed: 0    0    1    2    3                4\n",
-       "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
-       "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
-       "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
-       "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
-       "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
-       "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
-       "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
-       "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
-       "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
-       "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n",
-       "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
-       "11          11  6.3  3.4  5.6  2.4   Iris-virginica"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train:     Unnamed: 0    0    1    2    3                4\n",
+      "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
+      "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
+      "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
+      "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
+      "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
+      "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
+      "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
+      "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
+      "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
+      "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n",
+      "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
+      "11          11  6.3  3.4  5.6  2.4   Iris-virginica\n",
+      "Test:     Unnamed: 0    0    1    2    3                4\n",
+      "12          12  4.6  3.2  1.4  0.2      Iris-setosa\n",
+      "13          13  5.1  2.5  3.0  1.1  Iris-versicolor\n",
+      "14          14  7.2  3.0  5.8  1.6   Iris-virginica\n"
+     ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"../Oblig1/iris_subset.csv\")\n",
     "train = df.iloc[:12,]\n",
     "test = df.iloc[12:,]\n",
-    "train.head(20)"
+    "print(f'Train: {train}')\n",
+    "print(f'Test: {test}')"
    ]
   },
   {
@@ -191,106 +61,67 @@
    "id": "41268c8c",
    "metadata": {},
    "source": [
-    "Først leser vi inn dataene og delere dette opp i training og testing deler."
+    "Ut ifra hvordan dataene fra training delen ser ut, kan vi prøve å sortere disse på de individuelle kollonene for å se om dette skaper noen naturlige skiller."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "632f07fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.sort_values of     Unnamed: 0    0    1    2    3                4\n",
+      "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
+      "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
+      "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
+      "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
+      "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
+      "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
+      "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
+      "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
+      "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
+      "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n",
+      "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
+      "11          11  6.3  3.4  5.6  2.4   Iris-virginica>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.sort_values)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b50db855",
+   "id": "25bb0638",
    "metadata": {},
    "source": [
-    "Ut i fra hvordan test dataene ser ut ser det ut som vi kan prøve dele opp "
+    "Basert på denne grov sorteringen kan det se ut som å sortere datasette basert på verdiene i kollone med index 2 vil gi oss gode skiller. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "632f07fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
    "id": "ae6e1ade",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Unnamed: 0    0    1    2    3                4\n",
-       "12          12  4.6  3.2  1.4  0.2      Iris-setosa\n",
-       "13          13  5.1  2.5  3.0  1.1  Iris-versicolor\n",
-       "14          14  7.2  3.0  5.8  1.6   Iris-virginica"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtrain\u001b[49m\u001b[43m.\u001b[49m\u001b[43msort_index\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m2\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[31mTypeError\u001b[39m: 'method' object is not subscriptable"
+     ]
     }
    ],
    "source": [
-    "test.head(10)"
+    "print(train.sort_index(axis=2))"
    ]
   }
  ],
