--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "6e254cab",
    "metadata": {},
    "outputs": [
@@ -248,8 +248,8 @@
       "M    0.374269\n",
       "Name: count, dtype: float64\n",
       "1\n",
-      "B    0.627193\n",
-      "M    0.372807\n",
+      "B    0.631579\n",
+      "M    0.368421\n",
       "Name: count, dtype: float64\n",
       "1\n",
       "B    0.628319\n",
@@ -259,16 +259,62 @@
     }
    ],
    "source": [
-    "data = pd.DataFrame(columns=[\"train\", \"validation\", \"test\"])\n",
     "train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
     "test = df.drop(train_val.index)\n",
     "train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
-    "validation = train_val.drop(data.train.index)    \n",
+    "validation = train_val.drop(train.index)    \n",
     "  \n",
     "print(train[1].value_counts()/train.shape[0])\n",
     "print(validation[1].value_counts()/validation.shape[0])\n",
     "print(test[1].value_counts()/test.shape[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "86ea82ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = train.drop(1, axis=1)\n",
+    "train_targets = train[1]\n",
+    "validation_features = validation.drop(1, axis=1)\n",
+    "validation_targets = validation[1]\n",
+    "test_features = test.drop(1, axis=1)\n",
+    "test_targets = test[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "74c20907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9469026548672567"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt1 = DecisionTreeClassifier()\n",
+    "dt1.fit(train_features, train_targets)\n",
+    "\n",
+    "dt1.score(test_features, test_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c82775d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
