--- a/Oblig1/manual_classification.ipynb
+++ b/Oblig1/manual_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f4a2c6d6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8c41a6a9",
    "metadata": {},
    "outputs": [
@@ -61,12 +61,15 @@
    "id": "41268c8c",
    "metadata": {},
    "source": [
-    "Ut ifra hvordan dataene fra training delen ser ut, kan vi prøve å sortere disse på de individuelle kollonene for å se om dette skaper noen naturlige skiller."
+    "Ut ifra hvordan dataene fra training delen ser ut, kan vi prøve å sortere disse på de individuelle kollonene for å se om dette skaper noen naturlige skiller som kan gjøre det mulig for oss å gjennomføre\n",
+    "færre beregninger.\n",
+    "\n",
+    "Ref for iloc[]: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.iloc.html#pandas.DataFrame.iloc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "632f07fa",
    "metadata": {},
    "outputs": [
@@ -99,30 +102,104 @@
    "id": "25bb0638",
    "metadata": {},
    "source": [
-    "Basert på denne grov sorteringen kan det se ut som å sortere datasette basert på verdiene i kollone med index 2 vil gi oss gode skiller. "
+    "Basert på denne grov sorteringen kan det se ut som å sortere datasette basert på verdiene i kollone med index 2 vil gi oss gode skiller. \n",
+    "\n",
+    "Referanse for sort_values(): https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ae6e1ade",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtrain\u001b[49m\u001b[43m.\u001b[49m\u001b[43msort_index\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m2\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[31mTypeError\u001b[39m: 'method' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Unnamed: 0    0    1    2    3                4\n",
+      "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
+      "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
+      "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
+      "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
+      "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
+      "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
+      "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
+      "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
+      "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
+      "11          11  6.3  3.4  5.6  2.4   Iris-virginica\n",
+      "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
+      "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n"
      ]
     }
    ],
    "source": [
-    "print(train.sort_index(axis=2))"
+    "print(train.sort_values(\"2\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d36eba1c",
+   "metadata": {},
+   "source": [
+    "Som vi kan se av sortering basert på verdiene i kolloene med index 2 får vi klare skiller i train datasetet og vi kan derfor prøve å bruke disse naturlige skillene for å gjennomføre\n",
+    "den manuelle klasifikasjonen av datasettet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc02457d",
+   "metadata": {},
+   "source": [
+    "For å sette opp disse skillene så kan vi bruke ytterpunktene i verdiene for kollonen med index 2 mellom de naturlige skillene."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff06c091",
+   "metadata": {},
+   "source": [
+    "Skille_1: 3,9 - ((3,9 - 1,5) / 2) = 2,7 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5121bf",
+   "metadata": {},
+   "source": [
+    "Skille_2: 5,5 - ((5,5 - 5,1) / 2) = 5,3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c245e5e8",
+   "metadata": {},
+   "source": [
+    "H(S) = (-1/3 log_2(1/3))+(-1/3 log_2(1/3))+(-1/3 log_2(1/3)) = 0,528 * 3 = 1,584"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ddd80c5",
+   "metadata": {},
+   "source": [
+    "Ut i fra sorteringen vi har gjort på dataene i train så ser vi at vi får brøkmessig like splitter ut i fra de skillene vi har satt opp. Alle disse inneholder 1/3 av den totale mengden data i train og vil derfor gi samme oss Information Gain som vist at utregningen under. Det er derfor  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6550c8dc",
+   "metadata": {},
+   "source": [
+    "H(S, col_2 < 2,7) = H(S, col_2 >= 2,7 and col_2 < 5,3) = H(S, col_2 >= 5,3) = \n",
+    "(-1/3 log_2(1/3)) + (-2/3 log_2(2/3)) = 0,528 + 0,39 = 0,918"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90d604ee",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -141,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
