--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -314,7 +314,12 @@
    "id": "1c82775d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate_model(df, classifier, features, targets):\n",
+    "    predictions = classifier.predict(features)\n",
+    "    df.accuracy. accuracy_score(targets, predictions)\n",
+    "    df.pre"
+   ]
   }
  ],
  "metadata": {
