--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -271,6 +271,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "15413364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataset(df):\n",
+    "    train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
+    "    test = df.drop(train_val.index)\n",
+    "    train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
+    "    validation = train_val.drop(train.index)    \n",
+    "    return [train, validation, test]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 96,
    "id": "86ea82ff",
    "metadata": {},
