--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,33 +271,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "15413364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "B    0.625731\n",
+      "M    0.374269\n",
+      "Name: count, dtype: float64\n",
+      "1\n",
+      "B    0.631579\n",
+      "M    0.368421\n",
+      "Name: count, dtype: float64\n",
+      "1\n",
+      "B    0.628319\n",
+      "M    0.371681\n",
+      "Name: count, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "def dataset(df):\n",
+    "def split_data(df):\n",
     "    train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
     "    test = df.drop(train_val.index)\n",
     "    train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
     "    validation = train_val.drop(train.index)    \n",
-    "    return [train, validation, test]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "86ea82ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return [train, validation, test]\n",
+    "\n",
+    "def check_split_data(data):\n",
+    "    print(data[0][1].value_counts()/data[0].shape[0])\n",
+    "    print(data[1][1].value_counts()/data[1].shape[0])\n",
+    "    print(data[2][1].value_counts()/data[2].shape[0])\n",
+    "\n",
+    "#def split_targets_features(data):\n",
+    "\n",
+    "\n",
+    "def creat_set_targets_features(data):\n",
+    "\n",
+    "\n",
+    "\n",
     "train_features = train.drop(1, axis=1)\n",
     "train_targets = train[1]\n",
     "validation_features = validation.drop(1, axis=1)\n",
     "validation_targets = validation[1]\n",
     "test_features = test.drop(1, axis=1)\n",
-    "test_targets = test[1]"
+    "test_targets = test[1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ea82ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
