--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, confusion_matrix, f1_score\n",
@@ -24,338 +25,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "73dedc1a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "      <th>30</th>\n",
-       "      <th>31</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M</td>\n",
-       "      <td>17.99</td>\n",
-       "      <td>10.38</td>\n",
-       "      <td>122.80</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>0.11840</td>\n",
-       "      <td>0.27760</td>\n",
-       "      <td>0.3001</td>\n",
-       "      <td>0.14710</td>\n",
-       "      <td>0.2419</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25.38</td>\n",
-       "      <td>17.33</td>\n",
-       "      <td>184.60</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>0.1622</td>\n",
-       "      <td>0.6656</td>\n",
-       "      <td>0.7119</td>\n",
-       "      <td>0.2654</td>\n",
-       "      <td>0.4601</td>\n",
-       "      <td>0.11890</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M</td>\n",
-       "      <td>20.57</td>\n",
-       "      <td>17.77</td>\n",
-       "      <td>132.90</td>\n",
-       "      <td>1326.0</td>\n",
-       "      <td>0.08474</td>\n",
-       "      <td>0.07864</td>\n",
-       "      <td>0.0869</td>\n",
-       "      <td>0.07017</td>\n",
-       "      <td>0.1812</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.99</td>\n",
-       "      <td>23.41</td>\n",
-       "      <td>158.80</td>\n",
-       "      <td>1956.0</td>\n",
-       "      <td>0.1238</td>\n",
-       "      <td>0.1866</td>\n",
-       "      <td>0.2416</td>\n",
-       "      <td>0.1860</td>\n",
-       "      <td>0.2750</td>\n",
-       "      <td>0.08902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M</td>\n",
-       "      <td>19.69</td>\n",
-       "      <td>21.25</td>\n",
-       "      <td>130.00</td>\n",
-       "      <td>1203.0</td>\n",
-       "      <td>0.10960</td>\n",
-       "      <td>0.15990</td>\n",
-       "      <td>0.1974</td>\n",
-       "      <td>0.12790</td>\n",
-       "      <td>0.2069</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.57</td>\n",
-       "      <td>25.53</td>\n",
-       "      <td>152.50</td>\n",
-       "      <td>1709.0</td>\n",
-       "      <td>0.1444</td>\n",
-       "      <td>0.4245</td>\n",
-       "      <td>0.4504</td>\n",
-       "      <td>0.2430</td>\n",
-       "      <td>0.3613</td>\n",
-       "      <td>0.08758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M</td>\n",
-       "      <td>11.42</td>\n",
-       "      <td>20.38</td>\n",
-       "      <td>77.58</td>\n",
-       "      <td>386.1</td>\n",
-       "      <td>0.14250</td>\n",
-       "      <td>0.28390</td>\n",
-       "      <td>0.2414</td>\n",
-       "      <td>0.10520</td>\n",
-       "      <td>0.2597</td>\n",
-       "      <td>...</td>\n",
-       "      <td>14.91</td>\n",
-       "      <td>26.50</td>\n",
-       "      <td>98.87</td>\n",
-       "      <td>567.7</td>\n",
-       "      <td>0.2098</td>\n",
-       "      <td>0.8663</td>\n",
-       "      <td>0.6869</td>\n",
-       "      <td>0.2575</td>\n",
-       "      <td>0.6638</td>\n",
-       "      <td>0.17300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M</td>\n",
-       "      <td>20.29</td>\n",
-       "      <td>14.34</td>\n",
-       "      <td>135.10</td>\n",
-       "      <td>1297.0</td>\n",
-       "      <td>0.10030</td>\n",
-       "      <td>0.13280</td>\n",
-       "      <td>0.1980</td>\n",
-       "      <td>0.10430</td>\n",
-       "      <td>0.1809</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22.54</td>\n",
-       "      <td>16.67</td>\n",
-       "      <td>152.20</td>\n",
-       "      <td>1575.0</td>\n",
-       "      <td>0.1374</td>\n",
-       "      <td>0.2050</td>\n",
-       "      <td>0.4000</td>\n",
-       "      <td>0.1625</td>\n",
-       "      <td>0.2364</td>\n",
-       "      <td>0.07678</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  1      2      3       4       5        6        7       8        9       10  \\\n",
-       "0  M  17.99  10.38  122.80  1001.0  0.11840  0.27760  0.3001  0.14710  0.2419   \n",
-       "1  M  20.57  17.77  132.90  1326.0  0.08474  0.07864  0.0869  0.07017  0.1812   \n",
-       "2  M  19.69  21.25  130.00  1203.0  0.10960  0.15990  0.1974  0.12790  0.2069   \n",
-       "3  M  11.42  20.38   77.58   386.1  0.14250  0.28390  0.2414  0.10520  0.2597   \n",
-       "4  M  20.29  14.34  135.10  1297.0  0.10030  0.13280  0.1980  0.10430  0.1809   \n",
-       "\n",
-       "   ...     22     23      24      25      26      27      28      29      30  \\\n",
-       "0  ...  25.38  17.33  184.60  2019.0  0.1622  0.6656  0.7119  0.2654  0.4601   \n",
-       "1  ...  24.99  23.41  158.80  1956.0  0.1238  0.1866  0.2416  0.1860  0.2750   \n",
-       "2  ...  23.57  25.53  152.50  1709.0  0.1444  0.4245  0.4504  0.2430  0.3613   \n",
-       "3  ...  14.91  26.50   98.87   567.7  0.2098  0.8663  0.6869  0.2575  0.6638   \n",
-       "4  ...  22.54  16.67  152.20  1575.0  0.1374  0.2050  0.4000  0.1625  0.2364   \n",
-       "\n",
-       "        31  \n",
-       "0  0.11890  \n",
-       "1  0.08902  \n",
-       "2  0.08758  \n",
-       "3  0.17300  \n",
-       "4  0.07678  \n",
-       "\n",
-       "[5 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Oblig1/wdbc.data\", header=None).drop(0, axis=1)\n",
-    "df.head()\n"
+    "df = pd.read_csv(\"../Oblig1/wdbc.data\", header=None)\n",
+    "df.drop(0, axis=1)\n",
+    "df[1] = np.where(df[1] == \"M\", 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "6e254cab",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "B    0.625731\n",
-      "M    0.374269\n",
-      "Name: count, dtype: float64\n",
-      "1\n",
-      "B    0.631579\n",
-      "M    0.368421\n",
-      "Name: count, dtype: float64\n",
-      "1\n",
-      "B    0.628319\n",
-      "M    0.371681\n",
-      "Name: count, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
-    "test = df.drop(train_val.index)\n",
-    "train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
-    "validation = train_val.drop(train.index)    \n",
-    "  \n",
-    "print(train[1].value_counts()/train.shape[0])\n",
-    "print(validation[1].value_counts()/validation.shape[0])\n",
-    "print(test[1].value_counts()/test.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "15413364",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "B    0.625731\n",
-      "M    0.374269\n",
-      "Name: count, dtype: float64\n",
-      "1\n",
-      "B    0.631579\n",
-      "M    0.368421\n",
-      "Name: count, dtype: float64\n",
-      "1\n",
-      "B    0.628319\n",
-      "M    0.371681\n",
-      "Name: count, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def split_data(df):\n",
-    "    train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
-    "    test = df.drop(train_val.index)\n",
+    "def split_dataset(data):\n",
+    "    train_val = data.groupby(1, group_keys=False)[data.columns].sample(frac=0.8)\n",
+    "    test = data.drop(train_val.index)\n",
     "    train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
     "    validation = train_val.drop(train.index)    \n",
     "    return [train, validation, test]\n",
     "\n",
-    "def check_split_data(data):\n",
+    "def check_split_dataset(data):\n",
     "    print(data[0][1].value_counts()/data[0].shape[0])\n",
     "    print(data[1][1].value_counts()/data[1].shape[0])\n",
     "    print(data[2][1].value_counts()/data[2].shape[0])\n",
     "\n",
-    "#def split_targets_features(data):\n",
+    "def split_targets_and_features(data):\n",
+    "    targets = data[1]\n",
+    "    features = data.drop(1, axis=1)\n",
+    "    return [targets, features]\n",
     "\n",
+    "def create_set_of_targets_and_features(data):\n",
+    "    train = split_targets_and_features(data[0])\n",
+    "    validation = split_targets_and_features(data[1])\n",
+    "    test = split_targets_and_features(data[2])\n",
     "\n",
-    "def creat_set_targets_features(data):\n",
+    "    return [train, validation, test]\n",
     "\n",
+    "def create_full_training_dataset(input):\n",
+    "    data = split_dataset(input)\n",
+    "    dataset = create_set_of_targets_and_features(data)\n",
     "\n",
+    "    return dataset\n",
+    "        \n",
+    "def evaluate_model(classifier, features, targets):\n",
+    "    predictions = classifier.predict(features)\n",
+    "    accuracy = accuracy_score(targets, predictions)\n",
+    "    precision = precision_score(targets, predictions)\n",
+    "    recall = recall_score(targets, predictions)\n",
+    "    f1 = f1_score(targets, predictions)\n",
+    "    roc_auc = roc_auc_score(targets, predictions)\n",
     "\n",
-    "train_features = train.drop(1, axis=1)\n",
-    "train_targets = train[1]\n",
-    "validation_features = validation.drop(1, axis=1)\n",
-    "validation_targets = validation[1]\n",
-    "test_features = test.drop(1, axis=1)\n",
-    "test_targets = test[1]\n",
+    "    print(f'Accuracy: {accuracy:.2f}')\n",
+    "    print(f'Precision: {precision:.2f}')\n",
+    "    print(f'Recall: {recall:.2f}')\n",
+    "    print(f'F1: {f1:.2f}')\n",
+    "    print(f'ROCAUC: {roc_auc:.2f}')\n",
     "\n",
-    "\n",
-    "\n",
+    "def validate(classifier, train, validation):\n",
+    "    print('Training results:')\n",
+    "    evaluate_model(classifier, train[1], train[0])\n",
+    "    print('Validation results:')\n",
+    "    evaluate_model(classifier, validation[1], validation[0])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86ea82ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 125,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9469026548672567"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 1.00\n",
+      "Precision: 1.00\n",
+      "Recall: 1.00\n",
+      "F1: 1.00\n",
+      "ROCAUC: 1.00\n",
+      "Validation results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.97\n",
+      "Recall: 0.86\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.92\n"
+     ]
     }
    ],
    "source": [
-    "dt1 = DecisionTreeClassifier()\n",
-    "dt1.fit(train_features, train_targets)\n",
+    "dataset = create_full_training_dataset(df)\n",
     "\n",
-    "dt1.score(test_features, test_targets)"
+    "dt1 = DecisionTreeClassifier()\n",
+    "dt1.fit(dataset[0][1], dataset[0][0])\n",
+    "\n",
+    "validate(dt1, dataset[0], dataset[1])\n",
+    "\n"
    ]
   },
   {
@@ -364,12 +135,7 @@
    "id": "1c82775d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def evaluate_model(df, classifier, features, targets):\n",
-    "    predictions = classifier.predict(features)\n",
-    "    df.accuracy. accuracy_score(targets, predictions)\n",
-    "    df.pre"
-   ]
+   "source": []
   }
  ],
  "metadata": {
