--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "1c82775d",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "2     3      6"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "4cb81442",
    "metadata": {},
    "outputs": [
@@ -237,31 +237,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[[17, 18, 19], 16]</td>\n",
-       "      <td>[[22, 23, 24], 18]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16</td>\n",
-       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 test               test2\n",
-       "0  [[17, 18, 19], 16]  [[22, 23, 24], 18]\n",
-       "1                  16                  18"
+       "   test  test2\n",
+       "0     1      4\n",
+       "1     2      5\n",
+       "2     3      6\n",
+       "3     8      9"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.DataFrame({\"test\": df2.test.values + 8, \"test2\": df2.test2.values + 9})\n",
+    "row = {\"test\": 8, \"test2\": 9}\n",
+    "df2.loc[len(df2)]= row\n",
     "df2.head()"
    ]
   }
