--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 111,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
     "\n",
     "    return [train, validation, test]\n",
     "\n",
-    "def create_full_training_dataset(input):\n",
+    "def create_full_dataset(input):\n",
     "    data = split_dataset(input)\n",
     "    dataset = create_set_of_targets_and_features(data)\n",
     "\n",
@@ -82,25 +82,85 @@
     "    precision = precision_score(targets, predictions)\n",
     "    recall = recall_score(targets, predictions)\n",
     "    f1 = f1_score(targets, predictions)\n",
-    "    roc_auc = roc_auc_score(targets, predictions)\n",
+    "    roc_auc = roc_auc_score(targets, predictions)   \n",
     "\n",
-    "    print(f'Accuracy: {accuracy:.2f}')\n",
-    "    print(f'Precision: {precision:.2f}')\n",
-    "    print(f'Recall: {recall:.2f}')\n",
-    "    print(f'F1: {f1:.2f}')\n",
-    "    print(f'ROCAUC: {roc_auc:.2f}')\n",
+    "    return [accuracy, precision, recall, f1, roc_auc]\n",
     "\n",
-    "def validate(classifier, train, validation):\n",
+    "def multiple_evaluate_model(classifier, features, targets):\n",
+    "    accuracy, precision, recall, f1, roc_auc = [], [], [], [], []\n",
+    "\n",
+    "    for i in range(0,30,1):\n",
+    "        result = evaluate_model(classifier, features, targets)\n",
+    "        accuracy.append(result[0])\n",
+    "        precision.append(result[1])\n",
+    "        recall.append(result[2])\n",
+    "        f1.append(result[3])\n",
+    "        roc_auc.append(result[4])\n",
+    "\n",
+    "    print(len(accuracy))\n",
+    "    print(f'Accuracy: {np.mean(accuracy):.2f}')\n",
+    "    print(f'Precision: {np.mean(precision):.2f}')\n",
+    "    print(f'Recall: {np.mean(recall):.2f}')\n",
+    "    print(f'F1: {np.mean(f1):.2f}')\n",
+    "    print(f'ROCAUC: {np.mean(roc_auc):.2f}')\n",
+    "\n",
+    "def append_values(results, accuracy, precision, recall, f1, roc_auc):\n",
+    "        accuracy.append(results[0])\n",
+    "        precision.append(results[1])\n",
+    "        recall.append(results[2])\n",
+    "        f1.append(results[3])\n",
+    "        roc_auc.append(results[4])\n",
+    "\n",
+    "def results_print(accuracy, precision, recall, f1, roc_auc):\n",
+    "    print(f'Accuracy: {np.mean(accuracy):.2f}')\n",
+    "    print(f'Precision: {np.mean(precision):.2f}')\n",
+    "    print(f'Recall: {np.mean(recall):.2f}')\n",
+    "    print(f'F1: {np.mean(f1):.2f}')\n",
+    "    print(f'ROCAUC: {np.mean(roc_auc):.2f}')\n",
+    "\n",
+    "def test_results_print(accuracy, precision, recall, f1, roc_auc):\n",
+    "    print(f'Accuracy: {np.mean(accuracy):.2f} +- {np.std(accuracy):.2f}')\n",
+    "    print(f'Precision: {np.mean(precision):.2f} +- {np.std(precision):.2f}')\n",
+    "    print(f'Recall: {np.mean(recall):.2f} +- {np.std(recall):.2f}')\n",
+    "    print(f'F1: {np.mean(f1):.2f} +- {np.std(f1):.2f}')\n",
+    "    print(f'ROCAUC: {np.mean(roc_auc):.2f} +- {np.std(roc_auc):.2f}')\n",
+    "\n",
+    "def validate(classifier):    \n",
+    "    train_accuracy, train_precision, train_recall, train_f1, train_roc_auc = [], [], [], [], []\n",
+    "    validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc = [], [], [], [], []\n",
+    "\n",
+    "    for i in range(0, 10, 1):\n",
+    "        dataset = create_full_dataset(df)\n",
+    "        classifier.fit(dataset[0][1], dataset[0][0])\n",
+    "    \n",
+    "        results_train = evaluate_model(classifier, dataset[0][1], dataset[0][0])\n",
+    "        append_values(results_train, train_accuracy, train_precision, train_recall, train_f1, train_roc_auc)\n",
+    "    \n",
+    "        results_validate = evaluate_model(classifier, dataset[1][1], dataset[1][0])\n",
+    "        append_values(results_validate, validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc)\n",
+    "\n",
     "    print('Training results:')\n",
-    "    evaluate_model(classifier, train[1], train[0])\n",
+    "    results_print(train_accuracy, train_precision, train_recall, train_f1, train_roc_auc)\n",
     "    print('Validation results:')\n",
-    "    evaluate_model(classifier, validation[1], validation[0])\n",
-    "\n"
+    "    results_print(validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc)\n",
+    "\n",
+    "def test(classifier):\n",
+    "    accuracy, precision, recall, f1, roc_auc = [], [], [], [], []\n",
+    "\n",
+    "    for i in range(0, 10, 1):\n",
+    "        dataset = create_full_dataset(df)\n",
+    "        classifier.fit(dataset[0][1], dataset[0][0])\n",
+    "\n",
+    "        results = evaluate_model(classifier, dataset[2][1], dataset[2][0])\n",
+    "        append_values(results, accuracy, precision, recall, f1, roc_auc)\n",
+    "    \n",
+    "    print('Test results:')\n",
+    "    test_results_print(accuracy, precision, recall, f1, roc_auc)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 112,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -116,22 +176,24 @@
       "ROCAUC: 1.00\n",
       "Validation results:\n",
       "Accuracy: 0.93\n",
-      "Precision: 0.93\n",
-      "Recall: 0.88\n",
+      "Precision: 0.91\n",
+      "Recall: 0.90\n",
       "F1: 0.90\n",
-      "ROCAUC: 0.92\n"
+      "ROCAUC: 0.92\n",
+      "Test results:\n",
+      "Accuracy: 0.92 +- 0.03\n",
+      "Precision: 0.90 +- 0.04\n",
+      "Recall: 0.90 +- 0.04\n",
+      "F1: 0.90 +- 0.04\n",
+      "ROCAUC: 0.92 +- 0.03\n"
      ]
     }
    ],
    "source": [
-    "dataset = create_full_training_dataset(df)\n",
-    "#data = split_dataset(df)\n",
-    "#check_split_dataset(data)\n",
     "\n",
     "dt1 = DecisionTreeClassifier()\n",
-    "dt1.fit(dataset[0][1], dataset[0][0])\n",
-    "\n",
-    "validate(dt1, dataset[0], dataset[1])\n",
+    "validate(dt1)\n",
+    "test(dt1)\n",
     "\n"
    ]
   },
@@ -205,77 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4cb81442",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>test</th>\n",
-       "      <th>test2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   test  test2\n",
-       "0     1      4\n",
-       "1     2      5\n",
-       "2     3      6\n",
-       "3     8      9"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.289648506151142\n"
+     ]
     }
    ],
    "source": [
-    "row = {\"test\": 8, \"test2\": 9}\n",
-    "df2.loc[len(df2)]= row\n",
-    "df2.head()"
+    "\n",
+    "\n",
+    "print(np.mean(df[3]))"
    ]
   }
  ],
